--- a/app/src/main/res/layout/single_book.xml
+++ b/app/src/main/res/layout/single_book.xml
@@ -5,12 +5,12 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cover"/>
+        android:id="@+id/selfLink"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/date"
-        android:layout_below="@id/cover"/>
+        android:layout_below="@id/selfLink"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
